# opencodesearch

./: Cargo.toml  README.md  config.json  config.test.json  docker-compose.yml  test_mcp_curl.sh
certs/: localhost-cert.pem  localhost-key.pem
examples/python_project/: module_0.py  module_1.py  module_2.py  module_3.py  module_4.py  module_5.py  module_6.py  module_7.py  module_8.py  module_9.py
src/: chunking.rs  config.rs  indexing.rs  lib.rs  main.rs  mcp.rs  orchestrator.rs  qdrant_store.rs  quickwit.rs  types.rs  watchdog.rs
tests/: spec_tests.rs
