[package]
name = "opencodesearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
opencodesearchparser = "0.1.3"
qdrant-client = "1.17.0"
ollama-rs = "0.3.4"
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
walkdir = "2.5"
notify = "8.2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.18", features = ["v4"] }
tokio-util = "0.7"
schemars = "1.1"

[dev-dependencies]
tempfile = "3.23"
